--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rt3modules",
   "version": "1.0.0",
   "main": "out/modulos_rt3.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
